syntax = "proto3";
package fusionchain.qassets;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "gitlab.qredo.com/qrdochain/fusionchain/x/qassets/types";

// Msg defines the Msg service.
service Msg {
  // this line is used by starport scaffolding # proto/tx/rpc
  // TODO: document Mint
  rpc Mint(MsgMint) returns (MsgMintResponse);

  // TODO: document Burn
  rpc Burn(MsgBurn) returns (MsgBurnResponse);

  // TODO: document Send
  rpc Send(MsgSend) returns (MsgSendResponse);

  // this line is used by scaffolder # 1
}

// this line is used by starport scaffolding # proto/tx/message

message MsgMint {
  string creator = 1;
  uint64 from_wallet_id = 2;
  string to_workspace_addr = 3;
  bool is_token = 4;
  string token_name = 5;
  string token_contract_addr = 6;
  uint64 amount = 7;
}

message MsgMintResponse {}

message MsgBurn {
  string creator = 1;
  string from_workspace_addr = 2;
  uint64 to_wallet_id = 3;
  bool is_token = 4;
  string token_name = 5;
  string token_contract_addr = 6;
  uint64 amount = 7;
}

message MsgBurnResponse {}

message MsgSend {
  string creator = 1;
  string from_workspace_addr = 2;
  string to_workspace_addr = 3;
  string qasset_denom = 4;
  uint64 amount = 5;
}

message MsgSendResponse {}